# ProjetL3svg

./: Graphe  Makefile  README_1.md  README_2.md  README_3.md  client.cpp  data.cpp  data.hpp  error.txt  main  network.cpp  network.hpp  test.cpp  traitement.cpp  traitement.hpp
ClientProjetL3Svg/: client  client.cpp  client.sh
ProjetL3svg/: README_2.md  data.cpp  main  network.cpp  network.hpp  test.cpp  test.sh  traitement.cpp  traitement.hpp
premierProg/: CMakeLists.txt  Makefile  cborSample.cpp  error.txt  example-1  test  test.cpp  threaded_examp  writeInFile.cpp
